# rwc-annotations

./: .gitignore  CHANGELOG.md  README.md  melody_track_report_converted.csv  metadata.csv  metadata_mapping_melody_annotations.csv  metadata_mapping_vocals.csv  pyproject.toml
00_annotations_original/MIDI_aligned/: README.md
00_annotations_original/chords/: README.md
01_annotations_preprocessed/MIDI_aligned/: metadata_mapping_vocals.csv
01_annotations_preprocessed/beats/: README.md
01_annotations_preprocessed/melody/: README.md  RWC_P001.csv  RWC_P002.csv  RWC_P003.csv  RWC_P004.csv  RWC_P005.csv  RWC_P006.csv  RWC_P007.csv  RWC_P008.csv  RWC_P009.csv  RWC_P010.csv  RWC_P011.csv  RWC_P012.csv  RWC_P013.csv  RWC_P014.csv  RWC_P015.csv  RWC_P016.csv  RWC_P017.csv  RWC_P018.csv  RWC_P019.csv  RWC_P020.csv  RWC_P021.csv  RWC_P022.csv  RWC_P023.csv  RWC_P024.csv  RWC_P025.csv  RWC_P026.csv  RWC_P027.csv  RWC_P028.csv  RWC_P029.csv  RWC_P030.csv  RWC_P031.csv  RWC_P032.csv  RWC_P033.csv  RWC_P034.csv  RWC_P035.csv  RWC_P036.csv  RWC_P037.csv  RWC_P038.csv  RWC_P039.csv  (+61 more)
docs/annotation_corrections/: 000-baseline.md  2026-07-09-001-shift-vocal-midi-notes.md  2026-07-09-002-shift-rwc-p003-except-measures-9-17.md  2026-07-09-003-note-rwc-p003-missing-vocal-harmony.md  2026-07-09-004-note-rwc-p001-missing-vocal-harmony.md  2026-07-09-005-note-rwc-p002-chorus-unison-octave.md  2026-07-09-006-note-rwc-p004-chorus-issues.md  README.md  unresolved_annotation_notes.csv  (+1 more)
tests/: test_beats.py  test_chords.py  test_integration.py  test_melody.py  test_midi_vocal_shifts.py
(+215 files in other folders)
